<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_EventType" Id="{67ef2263-8233-449c-a176-46213cf33987}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_EventType :
(
	Alarm := 0,
	Message := 1
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>